methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:6: error: too many arguments for method faireV: ()Unit
        faireV(Color.YELLOW)
              ^MethodsPicture:7: error: too many arguments for method faireV: ()Unit
        faireV(Color.RED)
              ^MethodsPicture:8: error: too many arguments for method faireV: ()Unit
        faireV(Color.BLUE)
              ^MethodsPicture:9: error: too many arguments for method faireV: ()Unit
        faireV(Color.GREEN)
              ^